--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
   #  url: /year-archive/
     
   - title: "Projects"
-    url: /projects/
+    url: /talks/
  
   - title: "CV"
     url: /cv/
